# telegram-reporter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  models.py  pyproject.toml  scheduler.py  usecase.py
src/reporter/: main.py  models.py  usecase.py
tests/: test_daily.py  test_process_message.py
