[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16.0",
    "apscheduler>=3.11.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "loguru>=0.7.3",
    "mypy>=1.14.0",
    "peewee>=3.17.8",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "types-peewee>=3.17.8.20241221",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
^/.venv
'''

[project.scripts]
reporter = "reporter.main:main"
